// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 should allow weight to be overridden 1`] = `
.glamor-1 {
  display: block;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 500;
  font-size: 24px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h1
  align="initial"
  className="root glamor-0 glamor-1"
  color="navy700"
  hoverColor="none"
  href={undefined}
  interactive={false}
  multiline={undefined}
  name={undefined}
  notInteractive={undefined}
  onClick={undefined}
  size="extra-large"
  style={Object {}}
  target={undefined}
  weight="medium"
>
  An H1 Tag
</h1>
`;

exports[`H1 should render shallow component ok 1`] = `
.glamor-1 {
  display: block;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 24px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h1
  align="initial"
  className="root glamor-0 glamor-1"
  color="navy700"
  hoverColor="none"
  href={undefined}
  interactive={false}
  multiline={undefined}
  name={undefined}
  notInteractive={undefined}
  onClick={undefined}
  size="extra-large"
  style={Object {}}
  target={undefined}
  weight="normal"
>
  An H1 Tag
</h1>
`;
